--- a/src/Cms.PostService/src/Api/src/appsettings.Development.json
+++ b/src/Cms.PostService/src/Api/src/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;User Id=postgres;Password=postgres;Database=cms-post-service;Command Timeout=600;SSL Mode=Disable"
+    "Postgres": "Server=server;Port=5432;User Id=postgres;Password=postgres;Database=cms-post-service;Command Timeout=600;SSL Mode=Disable"
   },
   "MessagingBroker": {
     "RabbitMq": {
-      "HostName": "localhost",
+      "HostName": "server",
       "Port": 5672,
       "UserName": "rabbitmq",
       "Password": "rabbitmq",
